[package]
name = "raw-downloader"
version = "0.1.0"
authors = ["tiso"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
thiserror = "1.0.16"
bytes = "0.5.4"
sha2 = "0.8.1"
futures = "0.3.4"
itertools = "0.9.0"
shellexpand = "2.0.0"
ansi_term = "0.12.1"
